--- a/app/src/main/res/layout/header_lauout.xml
+++ b/app/src/main/res/layout/header_lauout.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="90dp"
     android:background="@color/colorPrimary">
 
     <TextView
-        android:text="TextView"
+        android:text="Welcome...!!!"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
@@ -15,7 +15,7 @@
         android:textAlignment="textStart"
         android:textStyle="normal|bold"
         android:textAllCaps="false"
-        tools:text="Welcome...!!!"
-        android:gravity="bottom|end"
-        android:layout_gravity="bottom|end" />
+        android:paddingLeft="10dp"
+        android:layout_marginTop="50dp"
+        />
 </LinearLayout>
