--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -2,37 +2,47 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:layout_marginBottom="2dp"
-    >
-
- <ImageView
-     android:layout_width="100dp"
-     android:layout_height="match_parent"
-     android:layout_marginRight="5dp"
-     android:src="@mipmap/ic_launcher"
-     android:id="@+id/imageView"/>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginLeft="2dp"
-    >
-    <TextView
+    android:layout_height="100dp"
+    android:paddingTop="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp">
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="Live: Trump and Alibaba's Jack Ma plan to create 1 million US jobs"
-        android:maxLines="3"
-        android:textSize="18sp"
-        android:id="@+id/title"
-        android:textColor="#000"
-        />
-
-
-</LinearLayout>
-
-
-
+        android:layout_height="match_parent"
+        app:cardElevation="@dimen/cardview_default_elevation"
+        app:cardCornerRadius="@dimen/cardview_default_radius"
+        app:cardUseCompatPadding="true"
+        app:cardBackgroundColor="@color/cardview_light_background"
+        android:foreground="?android:attr/selectableItemBackground">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <ImageView
+         android:id="@+id/imageView"
+         android:layout_width="0dp"
+         android:layout_height="match_parent"
+         android:layout_weight="3"
+         android:layout_marginRight="5dp"
+         tools:src="@mipmap/ic_launcher"
+         android:scaleType="centerCrop"/>
+        <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="7"
+        android:orientation="vertical"
+        android:layout_marginLeft="2dp">
+            <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Live: Trump and Alibaba's Jack Ma plan to create 1 million US jobs"
+            android:maxLines="3"
+            android:textSize="18sp"
+            android:textColor="#000"/>
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
